--- a/Client/HTML templates/home.html
+++ b/Client/HTML templates/home.html
@@ -12,7 +12,7 @@
   {% if error %}
     <p>{{ error }}</p>
   {% endif %}
-  <form method="post" enctype="multipart/form-data">
+  <form method="post" enctype="multipart/form-data" onsubmit="return validateFile()">
     <input type="file" name="file" id="file">
     <button type="submit">Upload</button>
   </form>
